--- a/requirements.txt
+++ b/requirements.txt
@@ -2,3 +2,9 @@ fastapi
 uvicorn
 jinja2
 python-multipart
+pandas>=2.0.0
+numpy>=1.24.0
+scikit-learn>=1.4.0
+joblib>=1.3.0
+pydantic>=2.6.0
+statsmodels>=0.14.0
